--- a/a.css
+++ b/a.css
@@ -6,7 +6,8 @@
     font-family:'Poppins',sans-serif;
 }
 :root{
-    --primary-color:#e6f51b;
+    
+    --primary-color:#679bc5;
     --secondary-color:#333;
     --main-color:#754ef9;
 }
