--- a/a.css
+++ b/a.css
@@ -12,7 +12,7 @@
     --main-color:#754ef9;
 }
 .dark-mode{
-    --primary-color:#0b061f;
+    --primary-color:#151f06;
     --secondary-color:#fff;
 }
 body{
@@ -26,7 +26,7 @@ body{
     left: 0;
     width: 100%;
     padding: 20px 7%;
-    background:transparent;
+    background:rgb(226, 226, 237);
     display: flex;
     align-items: center;
     z-index: 100;
@@ -231,10 +231,11 @@ body{
 }
 .home-img img{
    position: absolute;
-   left: 0;
-   width: 100%;
+   right: 200px;
+   width: 300px;
+   top: 180px;
    pointer-events: none;
-   bottom: 0;    
+   bottom: 100px;    
    opacity: 0;
     animation: slideLeft 1s ease forwards;
     animation-delay: 2.8s;
